--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "prod": "set NODE_ENV=production&& nodemon server.js"
   },
   "author": "Chester Okwulehie",
   "license": "ISC",
@@ -14,9 +15,12 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
+    "pug": "^3.0.3",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
