--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "pug": "^3.0.3",
     "sharp": "^0.33.5"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0"
   }
 }
